UI: Math text contrast fixed

--- a/theme/hypermd-light.scss
+++ b/theme/hypermd-light.scss
@@ -105,8 +105,8 @@
     span.cm-number { color: #164; }
     span.cm-def { color: #00f; }
     span.cm-variable { color: black; }
-    span.cm-variable-2 { color: #00f;; }
-    span.cm-variable-3 { color: #00f;; }
+    span.cm-variable-2 { color: #53dfdd; }
+    span.cm-variable-3 { color: #53dfdd; }
     span.cm-property { color: #e0ac00; }
     span.cm-operator { color: black; }
     span.cm-comment { color: #666; }
